<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Shop"
    android:background="@color/bg_pal">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose You Want!"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/soapPage"
            android:layout_marginBottom="40dp"/>
        <ImageButton
            android:id="@+id/soap"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:background="@drawable/button_r"
            android:src="@drawable/shop_soap" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textsoap"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/soap"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/laysoap"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish1"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/perf"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_r"
            android:src="@drawable/shop_perfume" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textperfume"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/perfume"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layperf"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish2"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/kit"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_r"
            android:src="@drawable/shop_starterpack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textkit"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/kit"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/laykit"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish3"
                android:background="@drawable/wish_icon" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>

    </ScrollView>
</LinearLayout>