<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".AccountFragment"
    android:orientation="vertical"
    android:background="@color/bg_pal">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello, User"
        android:textSize="40dp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome in account page, find the best deal and discover your favorite !."
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_marginBottom="30dp"/>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <Button
               android:textAllCaps="false"
               android:id="@+id/button1"
               android:textColor="#FFFFFFFF"
               android:textSize="20dp"
               android:text="@string/wish"
               android:textAlignment="textStart"
               android:paddingLeft="20dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:background="@drawable/buttonshape"
               android:shadowColor="#A8A8A8"
               android:drawableEnd="@drawable/ic_arrowright"
               android:paddingRight="30dp"
               android:shadowDx="-1"
               android:shadowDy="-1"
               android:shadowRadius="1"
               android:layout_marginBottom="20dp"/>
           <Button
               android:textAllCaps="false"
               android:id="@+id/button2"
               android:text="@string/coupon"
               android:textColor="#FFFFFFFF"
               android:textSize="20dp"
               android:textAlignment="textStart"
               android:paddingLeft="20dp"
               android:paddingRight="30dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:background="@drawable/buttonshape_1"
               android:drawableEnd="@drawable/ic_arrowright"
               android:shadowColor="#A8A8A8"
               android:shadowDx="-1"
               android:shadowDy="-1"
               android:shadowRadius="1"
               android:layout_marginBottom="20dp"
               />
           <Button
               android:textAllCaps="false"
               android:id="@+id/button3"
               android:text="@string/hist"
               android:textColor="#FFFFFFFF"
               android:textSize="20dp"
               android:textAlignment="textStart"
               android:paddingLeft="20dp"
               android:paddingRight="30dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:background="@drawable/buttonshape_2"
               android:drawableEnd="@drawable/ic_arrowright"
               android:shadowColor="#A8A8A8"
               android:shadowDx="-1"
               android:shadowDy="-1"
               android:shadowRadius="1"
               android:layout_marginBottom="20dp"
               />
           <Button
               android:textAllCaps="false"
               android:id="@+id/button4"
               android:text="@string/update_acc"
               android:textColor="#FFFFFFFF"
               android:textSize="20dp"
               android:textAlignment="textStart"
               android:paddingLeft="20dp"
               android:paddingRight="30dp"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:background="@drawable/buttomshape_3"
               android:drawableEnd="@drawable/ic_arrowright"
               android:shadowColor="#A8A8A8"
               android:shadowDx="-1"
               android:shadowDy="-1"
               android:shadowRadius="1"
               />
           <View
               android:layout_width="match_parent"
               android:layout_height="70dp"/>
       </LinearLayout>
    </ScrollView>
</LinearLayout>
