<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wash"
    android:background="@color/bg_pal">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Your Service!"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:text="We have the best service\nand top quality product for you."/>
        <ImageButton
            android:id="@+id/women"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:background="@drawable/button_r"
            android:src="@drawable/menu_woman" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvwomen"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/woment"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish1"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/sneakers"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_r"
            android:src="@drawable/menu_sneakers" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvsneaker"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/sneakert"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish2"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/gentle"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_r"
            android:src="@drawable/menu_gentle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvleather"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/leathert"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish3"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/bag"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_r"
            android:src="@drawable/menu_bag" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvbag"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:text="@string/bag"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="100px"
                android:layout_height="100px"
                android:id="@+id/wish4"
                android:background="@drawable/wish_icon" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>